# llamator

./: .buildinfo  .bumpversion.cfg  .gitignore  CONTRIBUTING.md  MANIFEST.in  README-dev.md  README.md  attack_descriptions.html  attacks_description.html  code_documentation.html  genindex.html  guides.html  howtos.html  index.html  licenses.html  licenses_table.html  objects.inv  project_overview.html  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  setup.cfg  setup_dev_env.sh
.github/workflows/: ci.yml  documentation.yml
_modules/: index.html
_modules/llamator/: main.html
_modules/llamator/attack_provider/: test_base.html
_modules/llamator/client/: chat_client.html  specific_chat_clients.html
_sources/: guides.rst.txt  howtos.md.txt  index.rst.txt  licenses_table.rst.txt  project_overview.md.txt
_static/: pygments.css
data/add-examples/: coverage.xml
data/edit-readme-examples/: coverage.xml
data/ethical-compliance/: coverage.xml
data/feature/jailbreak_attacks/: coverage.xml
data/main/: coverage.xml
docker/: Dockerfile  README.md  instruction.md  jupyter_docker.sh
docs/: attack_descriptions.md  attacks_description.md  code_documentation.md  code_documentation.rst  conf.py  howtos.md  index.rst  project_overview.md
docs/api/: llamator.rst  modules.rst
examples/: .env.example  llamator-api.ipynb  llamator-langchain-custom-attack.ipynb  llamator-selenium.ipynb  llamator-telegram.ipynb  llamator-whatsapp.ipynb
notebooks/: llamator-api-example.ipynb  llamator-deepseek-example.ipynb  llamator-selenium-example.ipynb  llamator-sycophancy_test-example.ipynb  llamator-telegram-example.ipynb  test_LLAMATOR.ipynb
notebooks_outdated/: llamator-selenium-example.ipynb
src/llamator/: __init__.py  __version__.py  initial_validation.py  logging.py  main.py  ps_logging.py
src/llamator/attack_data/: base64_prompts.parquet  ethical_compliance.csv  ethical_compliance.parquet  harmful_behavior.parquet  past_tense.csv  past_tense.parquet  prompt_injections_for_base64.parquet  suffixes.parquet  system_prompt_leakage.parquet  ucar-dan_prompts.parquet
src/llamator/attack_provider/: attack_loader.py  attack_registry.py  run_tests.py  test_base.py  util.py  work_progress_pool.py
src/llamator/attacks/: aim.py  attack_descriptions.json  base64_injection.py  bon.py  complimentary_transition.py  crecsendo.py  dan.py  dynamic_test.py  ethical_compliance.py  harmful_behavior.py  harmful_behavior_multistage.py  linguistic.py  logical_inconsistencies.py  past_tense.py  ru_dan.py  ru_self_refine.py  ru_typoglycemia.py  ru_ucar.py  self_refine.py  shuffle.py  suffix.py  sycophancy.py  system_prompt_leakage.py  translation.py  typoglycemia.py  ucar.py  utils.py
src/llamator/client/: attack_config.py  chat_client.py  client_config.py  langchain_integration.py  specific_chat_clients.py
src/llamator/format_output/: logo.py  results_table.py
src/llamator/report_generators/: excel_report_generator.py  (+1 more)
tests/: .env.example  test_llamator.py  test_local_llamator.py
(+2 files in other folders)
