[metadata]
name = llamator
# do not change version by hand: use bump_version.sh
version = attr: llamator.__version__.__version__
description = ""
author = LLaMasters (Neronov Roman, Nizamov Timur, Fazlyev Albert, Ivanov Nikita, Iogan Maksim)
author_email =
license = Attribution 4.0 International
license_files = LICENSE.md
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    License :: Attribution 4.0 International
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir=
    =src
packages=find:
zip_safe = False
platforms = any
include_package_data = True
python_requires = >=3.8
install_requires =
    python-dotenv>=0.5.1
    openai==1.6.1
    langchain==0.0.353
    langchain-community==0.0.7
    langchain-core==0.1.4
    argparse==1.4.0
    tqdm==4.66.1
    colorama==0.4.6
    prettytable==3.10.0
    pandas==2.2.2
    inquirer==3.2.4
    prompt-toolkit==3.0.43
    fastparquet==2024.2.0
[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest
