[metadata]
name = llamator
# do not change version by hand: use bump_version.sh
version = attr: llamator.__version__.__version__
description = Framework for testing vulnerabilities of large language models (LLM).
authors = Neronov Roman, Nizamov Timur, Fazlyev Albert, Ivanov Nikita, Iogan Maksim
license = Attribution 4.0 International
license_files = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Security
    Topic :: Software Development :: Testing

[options]
package_dir=
    =src
packages=find:
zip_safe = False
platforms = any
include_package_data = True
python_requires = >=3.9
install_requires =
    python-dotenv>=0.5.1
    openai==1.6.1
    langchain==0.2.16
    langchain-community==0.3.0
    langchain-core==0.2.38
    tqdm==4.66.3
    colorama==0.4.6
    prettytable==3.10.0
    pandas==2.2.2
    inquirer==3.2.4
    prompt-toolkit==3.0.43
    fastparquet==2024.2.0
    yandexcloud==0.316.0
    openpyxl==3.1.5
    datetime==5.5
[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest
